--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="invalid_credentials">Invalid credentials</string>
     <string name="nointernet_error">Please review your connection</string>
     <string name="default_error">There was an application error</string>
+    <string name="button_register">Register</string>
+    <string name="button_record">Record activity</string>
+    <string name="button_cards">Cards</string>
 
 </resources>
