--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,12 @@
     <string name="button_register">Register</string>
     <string name="button_record">Record activity</string>
     <string name="button_cards">Cards</string>
+    <string name="edit_userId"> UserID </string>
+    <string name="edit_context"> Context </string>
+    <string name="button_send"> Send </string>
+    <string name="edit_cardId"> CardID </string>
+    <string name="button_redeemed"> Redeemed </string>
+    <string name="edit_action"> Action </string>
+    <string name="edit_date"> Date </string>
 
 </resources>
