--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="nointernet_error">Please review your connection</string>
     <string name="default_error">There was an application error</string>
     <string name="button_register">Register</string>
+    <string name="button_token">Show Token</string>
     <string name="button_record">Record activity</string>
     <string name="button_cards">Cards</string>
     <string name="edit_userId"> UserID </string>
